--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>dev.tr7zw</groupId>
+  <groupId>net.yatopia</groupId>
   <artifactId>patchcredits</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
@@ -32,19 +36,13 @@
       <artifactId>compiler</artifactId>
       <version>0.9.6</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.10</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-    	 <groupId>javax.mail</groupId>
-		 <artifactId>mail</artifactId>
-		 <version>1.4.4</version>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.4</version>
     </dependency>
   </dependencies>
+
   <build>
     <defaultGoal>clean install</defaultGoal>
     <plugins>
@@ -60,4 +58,17 @@
       </plugin>
     </plugins>
   </build>
+
+  <!-- We're not going ot have repo soon so we're just going to deploy to ivan's :P -->
+  <!-- also that we still don't have access to codemc's -->
+  <distributionManagement>
+    <repository>
+      <id>ivan-releases</id>
+      <url>https://repo.mrivanplays.com/repository/ivan-releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>ivan-snapshots</id>
+      <url>https://repo.mrivanplays.com/repository/ivan-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
